        a "socket" for other processes to plug into with "plugs" and
        thus provide image content via a canvas remotely (from another
        process) as well as the socket process passing in events to the
        plug process to it can see key, mouse, multi etc. events.


2011-12-16 Mike Blumenkrantz

        * Fix possible 0 byte allocation in ecore-x

2011-12-20 Carsten Haitzler (The Rasterman)

        * Fix probable leak for g_static_mutex's on some architectures

2011-12-20 Jihoon Kim

	* Add XIM attribute support to Ecore_IMF

2011-12-21 Tae-Hwan Kim (Bluezery)

	* Add proxy set and timeout set functions in ecore_con.

2011-12-26 Tae-Hwan Kim (Bluezery)

	* Add proxy username/password set functions in ecore_con.

2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_Wayland (backend to support Wayland).
        * Add Shm and Egl engines for ecore_evas to draw in Wayland.

2011-12-27 Carsten Haitzler (The Rasterman)

        * Fix mouse down grab counts going bad by missing events.

2011-12-29 Carsten Haitzler (The Rasterman)

        * Fix massive post data probile in ecore-con that would cause
        post data to be corrupted (as it was never copied into the
        ecore con url struct) or could cause crashes if the memory
        pointed to became invalid.

2012-01-04 Carsten Haitzler (The Rasterman)

        * Add HEX, TERMINAL and PASSWORD layouts to ecore-imf

2011-01-05 Jiyoun Park (Jypark)

        * Fix Ecore-evas extn (external) for multi client model.
        "Socket" creates canvas and other process can show that canvas 
        using "Plug" image object. Before only one to one communication 
        is possible, but now many "plug"s can show socket's canvas.

2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_X function to return the keycode from a given keyname.

2012-02-06  Jihoon Kim (jihoon)

        * Set ECORE_IMF_INPUT_PANEL_LAYOUT_NORMAL as default layout in ecore_imf_context_add.