@@ -472,3 +472,4 @@
 2012-02-06  Jihoon Kim (jihoon)
 
         * Set ECORE_IMF_INPUT_PANEL_LAYOUT_NORMAL as default layout in ecore_imf_context_add.
+        * Add Ecore_IMF function to set or get the input panel-specific data.
